# wasmdome

./: .gitignore  Makefile  README.md  keyprep.sh
.github/workflows/: release.yml  rust.yml
.legacy/command-processor/: README.md
.legacy/command-processor/src/: lib.rs
.legacy/hosts/src/: lib.rs
.legacy/match-coord/: Cargo.toml  Makefile  README.md
.legacy/match-coord/src/: lib.rs  store.rs
.nats/: nats-leaf.conf
NPC/boylur-plait/: Cargo.toml  Makefile
NPC/boylur-plait/src/: lib.rs
NPC/clippy/: Cargo.toml  Makefile  README.md  clippy_host.yaml
NPC/corner-turret/: Cargo.toml  Makefile  README.md
NPC/corner-turret/src/: lib.rs
NPC/deploy-jenkins/: Cargo.toml  Makefile  README.md
NPC/deploy-jenkins/src/: lib.rs
NPC/kode-frieze/: Cargo.toml  Makefile  README.md
NPC/kode-frieze/src/: lib.rs
NPC/sir-emony/: Cargo.toml  Makefile
NPC/sir-emony/src/: lib.rs
NPC/turret/: Cargo.toml  Makefile  README.md  turret_host.yaml
NPC/turret/src/: lib.rs
command-processor/: Cargo.toml  Makefile
command-processor/src/: lib.rs
credsminter/: Cargo.toml  README.md
credsminter/src/: main.rs
domaincommon/: Cargo.toml  README.md
domaincommon/src/: commands.rs  events.rs  leaderboard.rs  lib.rs  radar.rs  state.rs
engine-provider/: Cargo.toml
engine-provider/src/: game_logic.rs  lib.rs  store.rs
historian/: Cargo.toml  Makefile  README.md  manifest.yaml
historian/src/: lib.rs
hosts/: Cargo.toml
hosts/src/: lib.rs
leaderboard/: Cargo.toml  Makefile  README.md  manifest.yaml
leaderboard/src/: lib.rs
match-coord/: Cargo.toml  Makefile
match-coord/src/: lib.rs  store.rs
mech-sdk/: Cargo.toml  README.md
mech-sdk/src/: lib.rs
new-mech-template/: Cargo.toml
protocol/: Cargo.toml  README.md
protocol/src/: lib.rs
scheduler/: Cargo.toml  Makefile  README.md  scheduler_manifest.yaml
scheduler/src/: lib.rs
wasmdome/: Cargo.toml  README.md  player_build.sh  prepare_for_wasmdome.sh  sample_match.sh  wasmdome_match.sh
wasmdome-web/: .gitignore  README.md  mix.exs
wasmdome-web/assets/: package-lock.json
wasmdome-web/assets/js/: app.js
wasmdome-web/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
wasmdome-web/lib/: nats_liveview.ex  nats_liveview_web.ex
wasmdome-web/lib/nats_liveview/: application.ex  gnat_subscriber.ex
wasmdome-web/lib/nats_liveview_web/: endpoint.ex  gettext.ex  router.ex
wasmdome-web/lib/nats_liveview_web/channels/: user_socket.ex
wasmdome-web/lib/nats_liveview_web/controllers/: page_controller.ex
wasmdome-web/lib/nats_liveview_web/lives/: nat_live.ex
wasmdome-web/lib/nats_liveview_web/templates/layout/: app.html.eex
wasmdome-web/lib/nats_liveview_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
wasmdome-web/test/nats_liveview_web/controllers/: page_controller_test.exs
wasmdome-web/test/nats_liveview_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
wasmdome-web/test/support/: channel_case.ex  conn_case.ex
wasmdome/src/: embeds.rs  main.rs
