[package]
name = "credsminter"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wascap = "0.4.7"
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.55"
nkeys = "0.0.9"
nuid = "0.2.1"
base64 = "0.12.3"
log = "0.4.8"
env_logger = "0.7.1"
redis = "0.16.0"
nats = "0.5"