[package]
name = "wasmdome-domain"
description = "Event Sourced Domain Model for the 'Assembly Mechs: Beyond WasmDome' Game"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-host"
readme = "README.md"
keywords = ["webassembly", "wasmdome", "wascc", "eventsourcing"]
categories = ["wasm", "games"]


[dependencies]
eventsourcing = "0.1.4"
eventsourcing-derive = "0.1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"