[package]
name = "historian"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.7.1"
wasmdome-protocol = { path = "../protocol" }
wasmdome-domain = { path = "../domaincommon" }
serde = "1.0"
serde_json = "1.0"
eventsourcing = "0.1.4"
log = "0.4.8"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
