[package]
name = "hosts"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[dependencies]
wascc-host = { version = "0.5.2", features = ["gantry"] }
#wascc-host = { path = "../../wascc-host" }
serde_json = "1.0.48"
nkeys = "0.0.8"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.7.1"
quicli = "0.4"
structopt = "0.3.11"
natsclient = "0.0.6"
wasmdome-protocol = "0.0.3"
wasmdome-domain = "0.0.3"