[package]
name = "hosts"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[dependencies]
wascc-host = { version = "0.6.1", features = ["gantry"] }
serde_json = "1.0.48"
nkeys = "0.0.9"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.7.1"
quicli = "0.4"
structopt = "0.3.11"
natsclient = "0.0.7"
wasmdome-protocol = { path = "../protocol" }
wasmdome-domain = { path = "../domaincommon" }
