[package]
name = "leaderboard"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.7.2"
wasmdome-protocol = { git = "https://github.com/wascc/wasmdome" }
wasmdome-domain = { git = "https://github.com/wascc/wasmdome" }
serde = "1.0"
serde_json = "1.0"
eventsourcing = "0.1.5"
log = "0.4.11"

[profile.release]
# Optimize for small code size
opt-level = "s"
