[package]
name = "match-coord"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wascc-actor = "0.2.1"
wasmdome-protocol = "0.0.1"
wasmdome-domain = "0.0.1"
serde = "1.0"
serde_json = "1.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
