[package]
name = "wasmdome-mech-sdk"
version = "0.0.5"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "SDK for developing WebAssembly robots to compete autonomously in arenas"
license = "Apache-2.0"
homepage = "https://wasmdome.dev"
documentation = "https://docs.rs/wasmdome-mech-sdk"
readme = "README.md"
keywords = ["wasmdome", "webassembly", "wasm", "wascc"]
categories = ["wasm", "games", "api-bindings"]

[dependencies]
wascc-actor = "0.7.2"
wascc-codec = "0.7.2"
serde_json = "1.0.56"
serde_derive = "1.0.114"
serde = "1.0.114"
wasmdome-protocol = { path = "../protocol" }
wasmdome-domain = { path= "../domaincommon" }
