[package]
name = "wasmdome"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wascc-host = { version = "0.7.0", features = ["gantry"] }
crossbeam-channel = "0.4.2"
serde_json = "1.0.48"
nkeys = "0.0.9"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.7.1"
quicli = "0.4.0"
structopt = "0.3.12"
natsclient = "0.0.7"
wasmdome-protocol = { path = "../protocol" }
wasmdome-domain = { path = "../domaincommon" }
wascc-nats = { version = "0.6.0", features = ["static_plugin"] }
wascc-keyvalue =  { path = "../../examples/keyvalue-provider", version = "0.2.1", features = ["static_plugin"] }
wascc-inmemory-streams =  { path = "../../examples/inmemory-streams", version = "0.2.1", features = ["static_plugin"] }
wascc-logging = { version = "0.6.0", features = ["static_plugin"] }
