[package]
name = "wasmdome"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"


[dependencies]
crossbeam-channel = "0.4.2"
serde_json = "1.0.56"
nkeys = "0.0.9"
serde = "1.0.114"
env_logger = "0.7.1"
quicli = "0.4.0"
structopt = "0.3.15"
nats = "0.6.0"
wasmdome-protocol = "0.0.6"
wasmdome-domain = "0.0.4"
dirs = "3.0.0"