[package]
name = "wasmdome"
version = "0.0.4"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"


[dependencies]
crossbeam-channel = "0.4.2"
serde_json = "1.0.56"
nkeys = "0.0.9"
serde = "1.0.114"
env_logger = "0.7.1"
quicli = "0.4.0"
structopt = "0.3.15"
nats = "0.6.0"
wasmdome-protocol = { path = "../protocol" }
wasmdome-domain = { path = "../domaincommon" }
dirs = "3.0.0"
prettytable-rs = "0.8"
uuid = { version = "0.8", features = ["v4"] }
crossbeam = "0.7.3"
chrono = { version = "0.4.13", features = ["serde"] }
