[package]
name = "clippy"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmdome-mech-sdk = {path = "../../mech-sdk"}
serde_json = "1.0.56"
serde_derive = "1.0.114"
serde = "1.0.114"

[profile.release]
# Optimize for small code size
opt-level = "s"
