[package]
name = "deeploy-jennkins"
version = "0.0.1"
authors = ["Brooks Townsend <brooks.townsend@capitalone.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmdome-mech-sdk = "0.0.7"
serde_json = "1.0.56"
serde_derive = "1.0.114"
serde = "1.0.114"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
