[package]
name = "turret"
version = "0.0.2"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmdome-mech-sdk = {path = "../../mech-sdk"}
serde_json = "1.0.48"
serde_derive = "1.0.104"
serde = "1.0.104"

[profile.release]
# Optimize for small code size
opt-level = "s"
